[gd_scene load_steps=13 format=2]

[ext_resource path="res://interface/Canvas/Canvas.gd" type="Script" id=1]
[ext_resource path="res://interface/Canvas/analog/Analog_Circle.png" type="Texture" id=2]
[ext_resource path="res://interface/Canvas/analog/Analog.gd" type="Script" id=3]
[ext_resource path="res://interface/fonts/montserrat_eb_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://interface/fonts/montserrat_eb_32debug.tres" type="DynamicFont" id=5]
[ext_resource path="res://interface/Debug.gd" type="Script" id=6]
[ext_resource path="res://interface/Canvas/health bar pixel.png" type="Texture" id=7]
[ext_resource path="res://scriptable_objects/powerups/active heart.png" type="Texture" id=8]
[ext_resource path="res://interface/CRTFrame.png" type="Texture" id=9]
[ext_resource path="res://interface/Canvas/FX/CRT.tscn" type="PackedScene" id=10]
[ext_resource path="res://interface/Canvas/GamePanel.tscn" type="PackedScene" id=11]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 50.0

[node name="Analog" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Analog_Big_Left" type="Sprite" parent="." index="0"]

editor/display_folded = true
modulate = Color( 1, 1, 1, 0.171294 )
position = Vector2( 125, 475 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Analog_Small" type="Sprite" parent="Analog_Big_Left" index="0"]

scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Analog_Big_Right" type="Sprite" parent="." index="1"]

editor/display_folded = true
modulate = Color( 1, 1, 1, 0.171294 )
position = Vector2( 900, 475 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Analog_Small" type="Sprite" parent="Analog_Big_Right" index="0"]

scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="L_fps" type="Label" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 20.0
margin_right = 86.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 3
text = "60"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="L_debug" type="Label" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 19.0
margin_top = 68.0
margin_right = 1009.0
margin_bottom = 568.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Debugging on"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 6 )
_sections_unfolded = [ "Anchor", "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Roll_Button" type="TouchScreenButton" parent="." index="4"]

modulate = Color( 1, 1, 1, 0.320431 )
position = Vector2( 869, 228 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )
bitmask = null
shape = SubResource( 1 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Label" type="Label" parent="Roll_Button" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 51.0
margin_right = 65.0
margin_bottom = 65.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "ROLL"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Lives" type="Sprite" parent="." index="5"]

editor/display_folded = true
position = Vector2( 67, 32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="Active_Heart1" type="Sprite" parent="Lives" index="0"]

position = Vector2( -17, 0.5 )
texture = ExtResource( 8 )

[node name="Active_Heart2" type="Sprite" parent="Lives" index="1"]

position = Vector2( 0, 0.5 )
texture = ExtResource( 8 )

[node name="Active_Heart3" type="Sprite" parent="Lives" index="2"]

position = Vector2( 17, 0.5 )
texture = ExtResource( 8 )

[node name="CRTFrame" type="Sprite" parent="." index="6"]

visible = false
position = Vector2( 480, 270 )
scale = Vector2( 0.887246, 0.665025 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="FPSTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = true

[node name="CRT" parent="." index="8" instance=ExtResource( 10 )]

visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 960.0
margin_bottom = 540.0

[node name="GamePanel" parent="." index="9" instance=ExtResource( 11 )]

visible = false

[connection signal="pressed" from="Roll_Button" to="." method="_on_TouchScreenButton_pressed"]

[connection signal="timeout" from="FPSTimer" to="." method="_on_FPSTimer_timeout"]


